--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "base-64": "^1.0.0",
+    "firebase": "^8.6.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0",
+    "react-native-screens": "^3.3.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
