--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,11 +24,11 @@ target 'splash_app' do
   # you should disable the next line.
   # use_flipper!()
 
-  # post_install do |installer|
-  #   installer.pods_project.targets.each do |target|
-  #     target.build_configurations.each do |config|
-  #       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
-  #     end
-  #   end
-  # end
+  post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        
+      end
+    end
+  end
 end
